--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.3.0",
-    "dotenv": "^16.5.0"
+    "dotenv": "^16.5.0",
+    "solc": "^0.8.28"
   },
   "compilerOptions": {
     "target": "ES2022",
