--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/mocha": "^10.0.0",
     "@types/node": "^18.0.0",
     "chai": "^4.3.0",
+    "glob": "^11.0.3",
     "hardhat": "^2.23.0",
     "mocha": "^10.8.2",
     "ts-node": "^10.9.0",
